static/css/base.css
@import url("https://fonts.googleapis.com/css2?family=Quintessential&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");

/* CSS variables */
:root {
  --font-heading: "Quintessential", Georgia, "Times New Roman", Times, serif;
  --font-body: "Nunito", Arial, Helvetica, sans-serif;
  --colour-first: #a15355;
  --colour-second: #4a764b;
  --colour-third: #323e50;
  --colour-white: #fff;
  --colour-black: #000;
  --bold: 700;
}

/* Global styles */

html {
  min-height: 100vh;
}

body {
  background: center/cover no-repeat url(/media/scentifique-candles.jpg);
  font-family: var(--font-body);
}

h1,
h2 {
  font-family: var(--font-heading);
  color: var(--colour-white);
}

#hero-message {
  background-color: var(--colour-second);
}

#main-nav {
  background-color: var(--colour-first);
}

#main-nav * {
  color: var(--colour-white);
}

#site-header {
  background-color: var(--colour-first);
}

#site-header * {
  color: var(--colour-white);
}

#account-dropdown * {
  color: var(--colour-black);
}

